--- a/src/pages/templates/org.html
+++ b/src/pages/templates/org.html
@@ -13,18 +13,18 @@
     <title>豬肉俠公益地圖</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="/static/pages/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href={% static "/static/pages/css/bootstrap.min.css" %} type="text/css">
 
     <!-- Custom Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/static/pages/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href={% static "/static/pages/font-awesome/css/font-awesome.min.css" %} type="text/css">
 
     <!-- Plugin CSS -->
     <!-- <link rel="stylesheet" href="css/animate.min.css" type="text/css"> -->
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/pages/css/common.css" type="text/css">
-	<link rel="stylesheet" href="/static/pages/css/org.css" type="text/css">    
+    <link rel="stylesheet" href={% static "/static/pages/css/common.css" %} type="text/css">
+	<link rel="stylesheet" href={% static "/static/pages/css/org.css" %} type="text/css">    
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -125,18 +125,18 @@
     </div>  
 
     <!-- jQuery -->
-    <script src="/static/pages/js/jquery-1.11.3.min.js"></script>
+    <script src={% static "/static/pages/js/jquery-1.11.3.min.js" %}></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/static/pages/js/bootstrap.min.js"></script>
+    <script src={% static "/static/pages/js/bootstrap.min.js" %}></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/static/pages/js/jquery.easing.min.js"></script>
-    <script src="/static/pages/js/jquery.fittext.js"></script>
-    <script src="/static/pages/js/wow.min.js"></script>
+    <script src={% static "/static/pages/js/jquery.easing.min.js" %}></script>
+    <script src={% static "/static/pages/js/jquery.fittext.js" %}></script>
+    <script src={% static "/static/pages/js/wow.min.js" %}></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/static/pages/js/creative.js"></script>
+    <script src={% static "/static/pages/js/creative.js" %}></script>
 
     <!-- Custom JS -->
 
